--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 
+/*----Background----*/
 body{
     background: #080808;
     color: #fff;
@@ -21,6 +22,8 @@ body{
     padding: 10px 10%;
 }
 
+
+/*----Header Section----*/
 nav{
     display: flex;
     align-items: center;
@@ -42,18 +45,93 @@ nav ul li a{
     color: #fff;
     text-decoration: none;
     font-size: 18px;
+    position: relative;
 }
+
 nav ul li a::after{ 
     content:'';
-    width: 100%;
+    width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #FF00FF;
     position: absolute;
     left: 0;
     bottom: -6px;
     transition: 0.5s;
 }
-
 nav ul li a:hover::after{
     width: 100%;
+}
+
+.header-text{
+    margin-top: 20%;
+    font-size: 30px;
+}
+.header-text h1{
+    margin-top: 20px;
+    font-size: 60px;
+}
+.header-text h1 span{
+    color: #FF00FF;
+}
+
+
+/*----About Section----*/
+#about{
+    padding: 80px 0;
+    color: #ababab;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+.about-col-2{
+    font-size: 15px;
+    flex-basis: 60%;
+}
+.subtitle{
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff;
+}
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+
+}
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #FF00FF; 
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+.tab-links.active-link::after{
+    width: 50%;
+}
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+    
+}
+.tab-contents ul li span{
+    color: hsl(300, 100%, 50%);
+    font-size: 14px;
 }
