--- a/style.css
+++ b/style.css
@@ -142,6 +142,42 @@ nav ul li a:hover::after{
     display: block;
 }
 
-p {
+#intro{ 
     text-indent: 25px;
+}
+
+
+/*----Services----*/
+#services{
+    padding: 30px 0;
+}
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.services-list div{
+    background: #262626;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-right: round;
+}
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.services-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+    color: #FF00FF;
+}
+.services-list div a{
+    text-decoration: underline;
+    color: #fff;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
 }
